# backend/api/v1/tag.go
@@ -13,9 +13,9 @@ import (
 // GetTag api
 // @tags Tags
 // @summary 根据id获取标签
-// @accept multipart/form-data
+// @accept json
 // @produce  application/json
-// @param id path int true "TAG ID"
+// @param id path int true "id"
 // @success 200 {object} models.Tag string "{"code":0,"msg":"操作成功", "data":{}}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
 // @router /tag/id/{id} [GET]
@@ -42,8 +42,8 @@ func GetTag(c *gin.Context) {
 // GetAllTags api
 // @tags Tags
 // @summary 获取所有的标签
-// @accept multipart/form-data
-// @produce  application/json
+// @accept json
+// @produce  json
 // @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
 // @router /tag/all [GET]
@@ -59,8 +59,8 @@ func GetAllTags(c *gin.Context) {
 // GetTagsCount is
 // @Tags Tags
 // @summary 获取标签总数
-// @accept multipart/form-data
-// @produce  application/json
+// @accept json
+// @produce  json
 // @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
 // @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
 // @router /tag/count [GET]
@@ -74,11 +74,20 @@ func GetTagsCount(c *gin.Context) {
 }
 
 // CreateTag is
+// @Tags Tags
+// @summary 创建标签
+// @accept json
+// @produce  json
+// @param row body services.TagModel false "row"
+// @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
+// @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
+// @router /tag/add [POST]
 func CreateTag(c *gin.Context) {
 	var (
 		newTag services.TagModel
 		err    error
 	)
+
 	err = c.ShouldBindJSON(&newTag)
 	if err != nil {
 		response.FailureResult(c, e.ParamError)
@@ -94,6 +103,14 @@ func CreateTag(c *gin.Context) {
 }
 
 // UpdateTag is
+// @Tags Tags
+// @summary 编辑标签
+// @accept json
+// @produce  json
+// @param row body services.UpdateTagModel false "row"
+// @success 200 {string} string "{"success":true,"data":{},"msg":"上传成功"}"
+// @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
+// @router /tag/update [PUT]
 func UpdateTag(c *gin.Context) {
 	var (
 		updateTag services.UpdateTagModel
@@ -110,5 +127,33 @@ func UpdateTag(c *gin.Context) {
 		return
 	}
 
+	response.SuccessResult(c, nil)
+}
+
+// DeleteTag is
+// @tags Tags
+// @summary 根据id删除
+// @accept json
+// @produce  json
+// @param id path int true "id"
+// @success 200 {object} models.Tag string "{"code":0,"msg":"操作成功", "data":{}}"
+// @failure 500 {string} string "{"code":1001,"msg":"查询出错", "data":null}
+// @router /tag/delete/{id} [DELETE]
+func DeleteTag(c *gin.Context) {
+	var (
+		id  uint64
+		err error
+	)
+
+	id, err = strconv.ParseUint(c.Param("id"), 10, 64)
+	if err != nil {
+		response.FailureResult(c, e.ParamError)
+		return
+	}
+	err = services.DeleteTag(uint(id))
+	if err != nil {
+		response.FailureResult(c, e.SearchError)
+		return
+	}
 	response.SuccessResult(c, nil)
 }
